--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Dev II - Week 1</title>
-</head>
-<body>
-    <div class="container">
-        <h1>Welcome to web dev II</h1>
-    </div>
-</body>
+   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Connor Greig</title>
+      <link href="css/main.css" rel="stylesheet">
+   </head>
+
+   <body>
+      <div class="container">
+         <h1>Connor Greig</h1>
+         <img id="my-image" src="images/me.jpg" alt="Connor Greig" width= "150">
+         <p> With a passion for media design and photography, I am currently working towards a diploma in Interactive Media Design from Algonquin College. Growing up, I was interested in digital mediums and would try to teach myself how to make videos and create digital art with the limited resources I had. 
+         </p>
+
+         <p> When I was in highschool, I took a media design program that reintroduced me to design as a young adult. This class inspired me to continue learning about media design in my college education. Learning further about the design industry has been very interesting to me. I have always focused on doing clean, clear work. Through researching my methods and going over every detail as many times as possible, everything I do I put as much effort into it that I can. 
+         </p>
+         
+      </div>
+
+      <dl>
+         <dt>Program</dt>
+         <dd>Interactive Media Design</dd>
+         <dt>Course</dt>
+         <dd>MTM6201-010 - Web Dev II </dd>
+         <dt>Hobbies</dt>
+         <dd>Photography, Driving, Thrifting</dd>
+      </dl>
+
+   </body>
+
 </html>
