--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <body>
       <div class="container">
          <h1>Connor Greig</h1>
-         <img id="my-image" src="images/me.jpg" alt="Connor Greig" width= "150">
+         <img id="my-image" src="images/connorgreig.jpg" alt="Connor Greig" width= "150">
          <p> With a passion for media design and photography, I am currently working towards a diploma in Interactive Media Design from Algonquin College. Growing up, I was interested in digital mediums and would try to teach myself how to make videos and create digital art with the limited resources I had. 
          </p>
 
